syntax = "proto3";

message TipoMedicamento {
    string tipo = 1;
}

message Medicamento {
    string codigoAlfabetico = 1;
    int32 codigoNumerico = 2;
    int32 digitoVerificador = 3;
    string nombre = 4;
    string droga = 5;
    int32 tipoMedicamento = 6;
}

message Response {
    string message = 1;
}

message Nulo {
}

service LaboratorioFarmaceutico {
    rpc Listo(Nulo) returns (Nulo);
    rpc AltaTipoMedicamento (TipoMedicamento) returns (Response);
    rpc BajaTipoMedicamento (TipoMedicamento) returns (Response);
    rpc AltaMedicamento (Medicamento) returns (Response);
    rpc TraerAerosoles (Nulo) returns (Response);
    rpc TraerMedicamenosConA (Nulo) returns (Response);
    rpc TraerTiposMedicamentos (Nulo) returns (Response);
} 